--- a/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj
+++ b/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj
@@ -37,6 +37,7 @@
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Cannon.cpp" />
     <ClCompile Include="CannonBall.cpp" />
+    <ClCompile Include="CheckPoint.cpp" />
     <ClCompile Include="CreateArrowMessage.cpp" />
     <ClCompile Include="CreateCannonBallMessage.cpp" />
     <ClCompile Include="CreateDart.cpp" />
@@ -116,6 +117,7 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Cannon.h" />
     <ClInclude Include="CannonBall.h" />
+    <ClInclude Include="CheckPoint.h" />
     <ClInclude Include="CreateArrowMessage.h" />
     <ClInclude Include="CreateCannonBallMessage.h" />
     <ClInclude Include="CreateDart.h" />
