--- a/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj.filters
+++ b/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj.filters
@@ -278,6 +278,21 @@
     <ClCompile Include="CheckPoint.cpp">
       <Filter>Source\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="CreateRockMessage.cpp">
+      <Filter>Source\SGD Wrappers\Events &amp; Messages</Filter>
+    </ClCompile>
+    <ClCompile Include="CreateRollingBoulerMessage.cpp">
+      <Filter>Source\SGD Wrappers\Events &amp; Messages</Filter>
+    </ClCompile>
+    <ClCompile Include="FallingRock.cpp">
+      <Filter>Source\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="FallingRockTrap.cpp">
+      <Filter>Source\Traps</Filter>
+    </ClCompile>
+    <ClCompile Include="RollingBoulder.cpp">
+      <Filter>Source\Traps</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -522,6 +537,21 @@
     </ClInclude>
     <ClInclude Include="CheckPoint.h">
       <Filter>Source\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="CreateRockMessage.h">
+      <Filter>Source\SGD Wrappers\Events &amp; Messages</Filter>
+    </ClInclude>
+    <ClInclude Include="CreateRollingBoulerMessage.h">
+      <Filter>Source\SGD Wrappers\Events &amp; Messages</Filter>
+    </ClInclude>
+    <ClInclude Include="FallingRock.h">
+      <Filter>Source\Weapons</Filter>
+    </ClInclude>
+    <ClInclude Include="FallingRockTrap.h">
+      <Filter>Source\Traps</Filter>
+    </ClInclude>
+    <ClInclude Include="RollingBoulder.h">
+      <Filter>Source\Traps</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
