--- a/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj
+++ b/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj
@@ -55,6 +55,7 @@
     <ClCompile Include="GameObjects.cpp" />
     <ClCompile Include="GameplayState.cpp" />
     <ClCompile Include="InstructionsState.cpp" />
+    <ClCompile Include="Ladder.cpp" />
     <ClCompile Include="Layer.cpp" />
     <ClCompile Include="Ledges.cpp" />
     <ClCompile Include="Lever.cpp" />
@@ -137,6 +138,7 @@
     <ClInclude Include="IEntity.h" />
     <ClInclude Include="IGameState.h" />
     <ClInclude Include="InstructionsState.h" />
+    <ClInclude Include="Ladder.h" />
     <ClInclude Include="Layer.h" />
     <ClInclude Include="Ledges.h" />
     <ClInclude Include="Lever.h" />
