--- a/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj.filters
+++ b/1503-StructByLightning-LostSamurai-StrawManProject/Lost Samurai/Last Samurai/Last Samurai.vcxproj.filters
@@ -281,6 +281,12 @@
     <ClCompile Include="Ladder.cpp">
       <Filter>Source\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="FinalDoor.cpp">
+      <Filter>Source\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="RollingBoulder.cpp">
+      <Filter>Source\Traps</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -528,6 +534,12 @@
     </ClInclude>
     <ClInclude Include="Ladder.h">
       <Filter>Source\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="FinalDoor.h">
+      <Filter>Source\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="RollingBoulder.h">
+      <Filter>Source\Traps</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
